Fixed PMD warnings: more descriptive field names; use of Integer.valueOf()